[project]
name = "gcp-changelog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Ballet", email = "jon@multani.info" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "click==8.3.1",
    "dateutils==0.6.12",
    "gpt4all>=2.8.2",
    "httpx==0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "lxml==6.0.2",
    "markdown==3.10",
    "markdownify==1.2.2",
    "pydantic==2.12.5",
]

[project.scripts]
gcp-changelog = "gcp_changelog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pytest==9.0.2",
    "pytest-mypy==1.0.1",
    "pytest-ruff==0.5",
    "ruff==0.14.11",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-lxml[mypy]==2026.1.1",
    "types-markdown==3.10.0.20251106",
    "types-python-dateutil==2.9.0.20251115",
]
doc = [
    "mkdocs==1.6.1",
    "mkdocs-theme-bootstrap4>=0.4.0",
]

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff.lint]
ignore = [
    # It's OK to have long line
    "E501",
]
extend-select = [
    # Sort imports
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
